--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,5 @@ deploy:
   bucket_path: "docker"
   on:
     branch: master
-    access_key_id: AKIATLNDRDFQICMMBT6S 
-    secret_access_key: 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
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
