app text changed

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "us-east-2"
-  app: "docker"
-  env: "Docker-env"
-  bucket_name: "elasticbeanstalk-us-east-2-230660577632"
-  bucket_path: "docker"
+  region: 'us-east-2'
+  app: 'docker'
+  env: 'Docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-230660577632'
+  bucket_path: 'docker'
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
